# platform

./: CMakeLists.txt  README.txt  add_platform_files.cmake  common.cmake  common_windows.cmake  linux-toolchain-mingw.cmake  linux.cmake  linux_include.cmake  mingw.cmake  osx.cmake  platform.CMake  readme.md  vs.cmake  vs_include.cmake
include/SDL/: SDL_config_minimal.h
include/all/: easylogging++.h
include/all/include/: cef_pack_resources.h
include/all/pugixml/: pugiconfig.hpp  pugixml.hpp
include/all/spdlog/details/: os.h
include/linux/include/: cef_pack_resources.h
include/windows/SDL2/: SDL_cpuinfo.h
include/windows/StackWalker++/: StackWalker.h
legal/: SDL2.txt  kainjow-mustache-build-only.txt  pugixml-build-only.txt
lib/: readme.md
lib/64/: protobuf_debug.lib
lib/linux-64/: chrome-sandbox  libgrpc++_unsecure.so.0  libgrpc_unsecure.so.0
lib/linux-i386/: chrome-sandbox
lib/linux-x86_64/: libgpr.so.0
lib/mingw-i686/: libprotobuf.la
lib/mingw-x86_64/: libprotobuf.la
lib/mingw32/: libprotobuf.la
lib/mingw64/: libprotobuf.la
lib/vs2013-win32/: protobuf_debug.lib  protobuf_release.lib
lib/vs2013-win64/: protobuf_debug.lib  protobuf_release.lib
lib/vs2015-win32/: gpr_release.lib  grpc_unsecure_debug.lib  libboost_chrono-vc140-mt-s-1_59.lib  libboost_context-vc140-mt-sgd-1_59.lib  libboost_date_time-vc140-mt-sgd-1_59.lib  libboost_filesystem-vc140-mt-s-1_59.lib  libboost_iostreams-vc140-mt-s-1_59.lib  libboost_random-vc140-mt-s-1_59.lib  libboost_random-vc140-mt-sgd-1_59.lib  libboost_signals-vc140-mt-s-1_59.lib  libboost_system-vc140-mt-sgd-1_59.lib  protobuf_debug.lib  protobuf_release.lib
lib/vs2015-win64/: LLVMBitReader.lib  LLVMMC.lib  LLVMMCParser.lib  LLVMOption.lib  cef.lib  clangASTMatchers.lib  clangAnalysis.lib  clangEdit.lib  clangFormat.lib  clangLex.lib  clangParse.lib  clangRewrite.lib  clangTooling.lib  clangToolingCore.lib  gpr_release.lib  libboost_chrono-vc140-mt-sgd-1_59.lib  libboost_container-vc140-mt-s-1_59.lib  libboost_container-vc140-mt-sgd-1_59.lib  libboost_coroutine-vc140-mt-s-1_59.lib  libboost_coroutine-vc140-mt-sgd-1_59.lib  libboost_filesystem-vc140-mt-sgd-1_59.lib  libboost_random-vc140-mt-s-1_59.lib  libboost_random-vc140-mt-sgd-1_59.lib  libboost_system-vc140-mt-sgd-1_59.lib  protobuf_debug.lib  protobuf_release.lib
lib/windows-32/: cef.lib
lib/windows-32/cpp_debug(MTd)/: gpr.lib  libboost_atomic-vc140-mt-sgd-1_59.lib  libboost_chrono-vc140-mt-sgd-1_59.lib  libboost_container-vc140-mt-sgd-1_59.lib  libboost_coroutine-vc140-mt-sgd-1_59.lib  libboost_filesystem-vc140-mt-sgd-1_59.lib  libboost_iostreams-vc140-mt-sgd-1_59.lib  libboost_signals-vc140-mt-sgd-1_59.lib  libboost_thread-vc140-mt-sgd-1_59.lib  protobuf.lib
lib/windows-32/cpp_release(MT)/: gpr.lib  libboost_atomic-vc140-mt-s-1_59.lib  libboost_container-vc140-mt-s-1_59.lib  libboost_context-vc140-mt-s-1_59.lib  libboost_coroutine-vc140-mt-s-1_59.lib  libboost_date_time-vc140-mt-s-1_59.lib  libboost_system-vc140-mt-s-1_59.lib  libboost_thread-vc140-mt-s-1_59.lib  protobuf.lib
lib/windows-64/: cef.lib
lib/windows-64/cpp_debug(MTd)/: gpr.lib  grpc_unsecure.lib  libboost_atomic-vc140-mt-sgd-1_59.lib  libboost_context-vc140-mt-sgd-1_59.lib  libboost_date_time-vc140-mt-sgd-1_59.lib  libboost_iostreams-vc140-mt-sgd-1_59.lib  libboost_thread-vc140-mt-sgd-1_59.lib  protobuf.lib
lib/windows-64/cpp_release(MT)/: libboost_atomic-vc140-mt-s-1_59.lib  libboost_chrono-vc140-mt-s-1_59.lib  libboost_context-vc140-mt-s-1_59.lib  libboost_date_time-vc140-mt-s-1_59.lib  libboost_filesystem-vc140-mt-s-1_59.lib  libboost_iostreams-vc140-mt-s-1_59.lib  libboost_system-vc140-mt-s-1_59.lib  libboost_thread-vc140-mt-s-1_59.lib  protobuf.lib
lib/windows-win64/: libcef.lib
lib32/: luajit.lib
lib64/: luajit.lib
platform_windows/: README-SDL.txt
platform_windows/lib/: README-curl.txt
platform_windows/lib32/: SDL.lib  SDL_image.lib  SDL_mixer.lib  curl.lib  luajit.lib  zdll.lib
platform_windows/lib64/: SDL.lib  SDL_image.lib  SDL_mixer.lib  curl.lib  luajit.lib  zdll.lib
res/linux-i386/: chrome-sandbox
resources/all/: cef.pak
resources/all/locales/: am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  ru.pak  sk.pak  (+12 more)
tool/linux/: grpc_cpp_plugin
tool/linux-mingw/: protoc
(+12 files in other folders)
